tests/snapshots/operation_extraction_test__mcp_registry_operations.snap
---
source: tests/operation_extraction_test.rs
expression: analysis.operations
---
getV0Servers:
  operation_id: getV0Servers
  method: GET
  path: /v0/servers
  summary: List MCP servers
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas:
    "200": ServerList
  parameters: []
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
getV0ServersServerId:
  operation_id: getV0ServersServerId
  method: GET
  path: "/v0/servers/{serverId}"
  summary: Get MCP server details
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas:
    "200": ServerResponse
  parameters:
    - name: serverId
      location: path
      required: true
      schema_ref: ~
      rust_type: String
      description: ~
      rust_ident: server_id
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
