tests/snapshots/operation_extraction_test__multiple_operations.snap
---
source: tests/operation_extraction_test.rs
expression: analysis.operations
---
deleteItem:
  operation_id: deleteItem
  method: DELETE
  path: "/items/{id}"
  summary: ~
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas: {}
  parameters:
    - name: id
      location: path
      required: true
      schema_ref: ~
      rust_type: String
      description: ~
      rust_ident: id
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
duplicateItem:
  operation_id: duplicateItem
  method: POST
  path: "/items/{id}"
  summary: ~
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas:
    "201": Item
  parameters:
    - name: id
      location: path
      required: true
      schema_ref: ~
      rust_type: String
      description: ~
      rust_ident: id
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
getItem:
  operation_id: getItem
  method: GET
  path: "/items/{id}"
  summary: ~
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas:
    "200": Item
  parameters:
    - name: id
      location: path
      required: true
      schema_ref: ~
      rust_type: String
      description: ~
      rust_ident: id
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
updateItem:
  operation_id: updateItem
  method: PUT
  path: "/items/{id}"
  summary: ~
  description: ~
  request_body:
    kind: Json
    schema_name: UpdateItemRequest
    media_type: application/json
  request_body_required: true
  response_schemas:
    "200": Item
  parameters:
    - name: id
      location: path
      required: true
      schema_ref: ~
      rust_type: String
      description: ~
      rust_ident: id
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
