tests/snapshots/operation_extraction_test__path_params_operations.snap
---
source: tests/operation_extraction_test.rs
expression: analysis.operations
---
getItem:
  operation_id: getItem
  method: GET
  path: "/items/{itemId}"
  summary: ~
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas:
    "200": Item
  parameters:
    - name: itemId
      location: path
      required: true
      schema_ref: ~
      rust_type: String
      description: ~
      rust_ident: item_id
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
