tests/snapshots/operation_extraction_test__post_with_body_operations.snap
---
source: tests/operation_extraction_test.rs
expression: analysis.operations
---
createItem:
  operation_id: createItem
  method: POST
  path: /items
  summary: ~
  description: ~
  request_body:
    kind: Json
    schema_name: CreateItemRequest
    media_type: application/json
  request_body_required: true
  response_schemas:
    "201": Item
  parameters: []
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
