tests/snapshots/operation_extraction_test__simple_get_operations.snap
---
source: tests/operation_extraction_test.rs
expression: analysis.operations
---
listItems:
  operation_id: listItems
  method: GET
  path: /items
  summary: ~
  description: ~
  request_body: ~
  request_body_required: false
  response_schemas:
    "200": ListItemsResponse
  parameters: []
  supports_streaming: false
  stream_parameter: ~
  tags: []
  deprecated: false
